fix: top bar adjustment fixed

--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -207,7 +207,7 @@
           </div>
         </div>
         <div class="content bg-neutral-900 flex-1 flex flex-col">
-          <div class="top-bar flex items-center justify-between px-4 py-2">
+          <div class="top-bar flex items-center justify-between px-4 py-2 ml-7">
             <div class="flex items-center">
               <button>
                 <svg
